--- a/MoonCat/MoonCat/MoonCat.csproj
+++ b/MoonCat/MoonCat/MoonCat.csproj
@@ -21,6 +21,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="pageConfirmPay.xaml.cs">
+      <DependentUpon>pageConfirmPay.xaml</DependentUpon>
+    </Compile>
     <Compile Update="pageSeatMovieShowing.xaml.cs">
       <DependentUpon>pageSeatMovieShowing.xaml</DependentUpon>
     </Compile>
@@ -66,6 +69,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="pageConfirmPay.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="pageSeatMovieShowing.xaml">
       <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
