--- a/MoonCat/MoonCat/MoonCat.csproj
+++ b/MoonCat/MoonCat/MoonCat.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Xamarin.Forms" Version="4.0.0.394984-pre10" />
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
     <PackageReference Include="Xamarin.Forms.CarouselView" Version="2.3.0-pre2" />
+    <PackageReference Include="Xamarin.Forms.InputKit" Version="3.0.11" />
   </ItemGroup>
 
   <ItemGroup>
