--- a/MoonCat/MoonCat.Android/MoonCat.Android.csproj
+++ b/MoonCat/MoonCat.Android/MoonCat.Android.csproj
@@ -80,7 +80,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\dbBookMovieTicket.db" />
+    <AndroidAsset Include="Assets\BookMovieTicket.db" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
