--- a/MoonCat/MoonCat/MoonCat.csproj
+++ b/MoonCat/MoonCat/MoonCat.csproj
@@ -15,7 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="sqlite-net-pcl" Version="1.6.258-beta" />
-    <PackageReference Include="Xamarin.Forms" Version="4.0.0.394984-pre10" />
+    <PackageReference Include="Xamarin.Forms" Version="4.0.0.425677" />
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
     <PackageReference Include="Xamarin.Forms.CarouselView" Version="2.3.0-pre2" />
   </ItemGroup>
@@ -60,9 +60,7 @@
     <Compile Update="pageBookTicketFollowCinema.xaml.cs">
       <DependentUpon>pageBookTicketFollowCinema.xaml</DependentUpon>
     </Compile>
-    <Compile Update="MasterMainMenuItem.cs">
-      <SubType>Code</SubType>
-    </Compile>
+    <Compile Update="MasterMainMenuItem.cs" />
     <Compile Update="pageTrailerWebView.xaml.cs">
       <DependentUpon>pageTrailerWebView.xaml</DependentUpon>
     </Compile>
