--- a/MoonCat/MoonCat.Android/MoonCat.Android.csproj
+++ b/MoonCat/MoonCat.Android/MoonCat.Android.csproj
@@ -136,5 +136,14 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\user2.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\bank.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\card.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\wallet.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
